--- a/site/A.html
+++ b/site/A.html
@@ -5,7 +5,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test</title>
     <script src="https://kit.fontawesome.com/b43a115710.js"></script>
-    <link rel="stylesheet" href="AB.css">
+    <!-- <link rel="stylesheet" href="AB.css"> -->
+    <style>
+
+
+body{
+    background-color: rgb(82, 80, 80);
+}
+
+.sb{
+    /* box-sizing: border-box; */
+    position: absolute;
+    height: 50px;
+    /* width: 210px; */
+    background-color: rgb(36, 34, 34);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50% , -50%);
+    border-radius: 40px;
+    padding: 10px;
+}
+
+.btn{
+    color: rgb(32, 39, 138);
+    /* background-color: white; */
+    float: right;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    border-radius: 50%;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+}
+
+.sb:hover > .st{
+    width: 240px;
+    padding: 8px 16px;
+}
+
+.st{
+    background: none;
+    border: none;
+    outline: none;
+    float: left;
+    font-size: 16px;
+    line-height: 36px;
+    width: 0px;
+    transition: 0.4s;
+}
+    </style>
     
 </head>
 <body>
